--- a/course-06/packages/packages.css
+++ b/course-06/packages/packages.css
@@ -2,11 +2,23 @@ main {
   padding-top: 32px;
 }
 
+.background {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: url('../images/plans-background.jpg');
+  z-index: -1;
+}
+
 .package {
+  position: relative;
   width: 80%;
   margin: 16px 0;
   border: 4px solid #0e4f1f;
   border-left: none;
+  /* 每个元素都有一个自动应用的z轴值，auto值等于0 */
+  /* 加载没有任何position属性的元素没有效果 */
+  /* z-index: 999; */
 }
 
 .package:hover,
@@ -21,6 +33,17 @@ main {
   color: inherit;
   display: block;
   padding: 32px;
+}
+
+.package__badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 20px;
+  padding: 8px;
+  font-size: 12px;
+  color: #fff;
+  background: #ff5454;
 }
 
 .package__subtitle {
