--- a/course-06/practices/main.css
+++ b/course-06/practices/main.css
@@ -4,6 +4,7 @@ html {
   border: 5px solid white;
   margin: 15px;
   height: 2000px;
+  overflow: hidden;
 }
 
 body {
@@ -11,6 +12,9 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
+  /* 由于CSS的默认行为，如果把overflow:hidden声明到body元素上 */
+  /* overflow: hidden只影响有滚动行为的元素，所以如果body本身内容不溢出，它看起来好像没变化 */
+  overflow: hidden;
 }
 
 .parent {
@@ -18,6 +22,12 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
+  /* 一旦在父元素之外，将隐藏元素 */
+  /* overflow: hidden; */
+
+  position: relative;
+  top: 200px;
+
 }
 
 .parent div {
@@ -29,13 +39,18 @@ body {
 }
 
 .parent .child-1 {
+  /* 子绝父相 */
+  /* position: relative;
+  top: 300px;
+  left: 50px; */
+
   /* 类似于将元素从文档流中取出，并将一般行为从块级元素更改为内联快元素 */
   /* 可以应用于块级元素和内联元素 */
-  position: fixed;
+  /* position: fixed; */
   /* 应用定位更改只有在不同于static的值时才可能（default值） */
-  top: 0;
+  /* top: 0;
   left: 0;
   margin: 0;
   width: 100%;
-  box-sizing: border-box;
+  box-sizing: border-box; */
 }
